working on todo module

--- a/src/main/resources/problem_messages_fa.properties
+++ b/src/main/resources/problem_messages_fa.properties
@@ -3,3 +3,8 @@ common.entity.version_mismatch=""
 
 common.username.unacceptable=""
 user.plain_password.unacceptable=""
+
+user.login.invalid_credentials=""
+
+todo.title.unacceptable=""
+todo.description.unacceptable=""
